Add Players class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,6 @@ add_executable(Monopoly_Sim main.cpp
         Railroad.cpp
         Board.cpp
         Board.h
+        Players.cpp
+        Players.h
 )
