Add more menu and monopoly checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,6 @@ add_executable(Monopoly_Sim main.cpp
         Gameplay.h
         FreeParking.cpp
         FreeParking.h
+        #Menu.cpp
+        #Menu.h
 )
