Add trading functionality (WIP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ add_executable(Monopoly_Sim main.cpp
         Gameplay.h
         FreeParking.cpp
         FreeParking.h
+        Trade.cpp
+        Trade.h
         #Menu.cpp
         #Menu.h
 )
